feat: add price endpoint
